--- a/pom.xml
+++ b/pom.xml
@@ -42,6 +42,18 @@
         </dependency>
 
         <dependency>
+            <groupId>io.swagger.core.v3</groupId>
+            <artifactId>swagger-jaxrs2</artifactId>
+            <version>2.1.10</version>
+        </dependency>
+
+        <dependency>
+            <groupId>io.swagger.core.v3</groupId>
+            <artifactId>swagger-core</artifactId>
+            <version>2.1.10</version>
+        </dependency>
+
+        <dependency>
             <groupId>org.apache.tomcat</groupId>
             <artifactId>tomcat-servlet-api</artifactId>
             <version>9.0.17</version>
@@ -58,7 +70,6 @@
             <artifactId>jackson-core</artifactId>
             <version>2.15.3</version>
         </dependency>
-
     </dependencies>
 
 </project>
