--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,8 @@
+spring.datasource.url=jdbc:postgresql://localhost:5432/school
+spring.datasource.username=postgres
+spring.datasource.password=root
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 
+spring.jpa.hibernate.ddl-auto=validate
+
+spring.thymeleaf.prefix=classpath:/templates/
