--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,11 @@
+# ???????????? ???? ??????
 spring.datasource.url=jdbc:postgresql://localhost:5432/school
 spring.datasource.username=postgres
 spring.datasource.password=root
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 
+# ???????????? Hibernate
 spring.jpa.hibernate.ddl-auto=validate
 
+# ???????????? Thymeleaf
 spring.thymeleaf.prefix=classpath:/templates/
